# cube

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: build_cpu2.yml
LTD_DISPLAY/: LTD_DISPLAY.ioc
LTD_DISPLAY/Application/: app_main.c  app_main.h  communicate.c  communicate.h  crc.c  crc.h  display.c  display.h  display_tankopera.c  display_tankopera.h  exit.c  exit.h  hgs.c  hgs.h  modbus_agreement.c  modbus_agreement.h
LTD_DISPLAY/Application/display/: display.c  display_tankopera.c  display_tankopera.h  exit.h
LTD_DISPLAY/Application/system_param/: com_port_config.h  cpu3_comm_display_params.c  cpu3_comm_display_params.h  system_parameter.c  system_parameter.h
LTD_DISPLAY/Communication/DSM_modbus/: DSM_DataAnalysis_modbus2.c  DSM_SlaveModbus_modbus2.c  DSM_SlaveModbus_modbus2.h  DSM_comm.h  DSM_communication.c  DSM_communication.h  DSM_stateformodbus2.h  DSM_system_parameter.c  (+1 more)
LTD_DISPLAY_CPU3/: CMakeLists.txt  LTD_DISPLAY_CPU3.ioc  font_check.py
LTD_DISPLAY_CPU3/Application/: app_main.c  app_main.h
LTD_DISPLAY_CPU3/Application/display/: display.c  display.h  display_tankopera.c  display_tankopera.h  hgs.c
LTD_DISPLAY_CPU3/Application/system_param/: com_port_config.h  cpu3_comm_display_params.c  cpu3_comm_display_params.h  mb85rs2m.c  mb85rs2m.h  stateformodbus.h  system_parameter.c  system_parameter.h
LTD_DISPLAY_CPU3/Communication/common/: address.c  address.h  com_manager.c  my_crc.c  my_crc.h
LTD_DISPLAY_CPU3/Communication/internal/main_board_modbus/: communicate.c  communicate.h  cpu2_communicate.c  cpu2_communicate.h  dataanalysis_modbus.c  dataanalysis_modbus.h  device_param_sync.c  device_param_sync.h  stateformodbus.h
LTD_DISPLAY_CPU3/Core/Inc/: main.h  stm32f4xx_hal_conf.h  usart.h
LTD_DISPLAY_CPU3/Core/Src/: dma.c  main.c  stm32f4xx_it.c  usart.c
LTD_DISPLAY_CPU3/cmake/: toolchain-arm-none-eabi.cmake
LTD_DISPLAY_CPU3/readme/: LTD故障代码表.xlsx
LTD_MAIN/: LTD_MAIN.ioc
LTD_MAIN_CPU2/: CMakeLists.txt  LTD_MAIN_CPU2.ioc  STM32F429ZGTX_FLASH.ld  STM32F429ZGTX_RAM.ld
LTD_MAIN_CPU2/docs/: LTD故障代码表.xlsx  decoupling_implementation_plan.md
LTD_MAIN_CPU2_TEXT/docs/: LTD故障代码表.xlsx
LTD_MAIN_NEW_WEIGHT/: LTD_MAIN_NEW_WEIGHT.ioc  LTD_MAIN_NEW_WEIGHT.txt
LTD_MAIN_NEW_WEIGHT/docs/: LTD故障代码表.xlsx
MOTOR_TMC5130/: MOTOR_TMC5130.ioc
STM32_TMC5130/: STM32_TMC5130.ioc
STM32_TMC5130/TMC5130/: tmc5130.c  tmc5130.h
WirelessHost/: WirelessHost.ioc
WirelessHost_V2.0/: WirelessHost_V2.0.ioc
WirelessHost_V2.0/Peripheral/: timer.h
WirelessHost_V2.1/Peripheral/: bpm.h
WirelessHost_V4.1_LOWPOWER/Peripheral/: timer.c
WirelessHost_V4.1_init/: WirelessHost_V4.1_init.ioc
WirelessHost_V4.1_init/Peripheral/: timer.c  wireless_host_communication.c  wireless_host_communication.h
cmake/: toolchain-arm-none-eabi.cmake
docs/: REPO_SCAN.md  build_cpu2.md  build_cpu3.md
measure_water/: measure_water.ioc
measure_water/Hardware/: FDC2212.c  FDC2212.h
old/WirelessHost_V2.1/: WirelessHost_V2.1.ioc
old/WirelessHost_V3.0/: WirelessHost_V3.0.ioc
old/WirelessHost_V4.0/: WirelessHost_V4.0.ioc
old/WirelessHost_V4.1_LOWPOWER/: WirelessHost_V4.1_LOWPOWER.ioc
text/: text.ioc
tools/: build_cpu2.sh  build_cpu3.sh
(+277 files in other folders)
